tests/fixtures/invalid/return_type_mismatch.ny
fn get_value() -> i32 {
    return "hello";
}

fn main() -> i32 {
    return get_value();
}
